# email_secure_wallet_1

./: README.md
server/: Cargo.toml
server/src/: main.rs  res_error.rs  utils.rs
server/src/services/: cloud_kms.rs  email_service.rs  mod.rs  signature_service.rs
server/src/services/db_service/: mod.rs
server/src/web/: basic_routes.rs  email_req_routes.rs  mod.rs
