[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.1.3", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
tokio = { version = "1.38.0", features = ["full"] }
